fixed rmhc logo to fit inside nav and show on safari browser

--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ p {
     font-family: 'Open Sans', sans-serif;
 }
 .navbar {
-    background-color: rgb(139,0,139,0.83);
+    background-color: rgba(139,0,139,0.83);
     position:fixed;
     width:100%;
     z-index:1000;
@@ -19,7 +19,8 @@ p {
 }
 
 .nav-bar-logo {
-    max-height: 150%;
+    height: 10vh;
+    max-height: 100%;
 }
 
 .About {
@@ -76,7 +77,7 @@ p {
     align-items: center;
 
     height: 80vh;
-    background-color: rgb(120, 0, 0,0.8);
+    background-color: rgba(120, 0, 0,0.8);
     width: 100%;
     /* added padding to this div*/
     padding-left: 30px;
@@ -90,7 +91,7 @@ p {
     align-items: center;
 
     height: 100vh;
-    background-color: rgb(200, 150, 50,0.8);
+    background-color: rgba(200, 150, 50,0.8);
     width: 100%
 }
 
@@ -101,7 +102,7 @@ p {
     align-items: center;
 
     height: 100vh;
-    background-color: rgb(120, 0, 120,0.8);
+    background-color: rgba(120, 0, 120,0.8);
     width: 100%
 }
 
